--- a/public/partials/site.html
+++ b/public/partials/site.html
@@ -134,7 +134,7 @@
 
           <ul class="nav nav-tabs" role="tablist" style="margin-top: 5%;">
             <li role="presentation" class="active"><a href="#pizzas" aria-controls="home" role="tab" data-toggle="tab">Pizzas</a></li>
-            <li role="presentation"><a href="#esfihas" aria-controls="esfihas" role="tab" data-toggle="tab">Espihas</a></li>
+            <li role="presentation"><a href="#esfihas" aria-controls="esfihas" role="tab" data-toggle="tab">Esfihas</a></li>
             <li role="presentation"><a href="#sucos" aria-controls="sucos" role="tab" data-toggle="tab">Sucos</a></li>
             <li role="presentation"><a href="#bebidas" aria-controls="bebidas" role="tab" data-toggle="tab">Bebidas</a></li>
           </ul>
@@ -171,7 +171,7 @@
                     <h4 class="modal-title" id="exampleModalLabel">Pizza - </b>{{pizza.nome}}</h4></h4>
                   </div>
                   <div class="modal-body">
-                    <form name="form" ng-submit="adicionaPedido(this)">
+                    <form name="form" ng-submit="adicionaPedido(this, 'pizza')">
                       <div class="col-md-6">
                         <div class="form-group">
                           <label for="Quantidade" class="control-label">Quantas pizzas?:</label>
@@ -206,7 +206,53 @@
 
             <!-- PAINEL DE ESFIHAS -->
             <div role="tabpanel" class="tab-pane" id="esfihas">
-              Espihas
+              <table class="table">
+                <thead>
+                 <tr>
+                   <th>Sabores</th>
+                   <th>Valor</th>
+                 </tr>
+                </thead>
+
+                <tbody class="conteudo-esfihas">
+                  <tr ng-repeat="esfiha in esfihas">
+                    <td>{{esfiha.nome}} <br /><small>{{esfiha.descricao}}</small></td>
+                    <td>{{esfiha.valor}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{esfiha._id}}" ng-click="enviaEsfiha(esfiha)"></span></td>
+                  </tr>
+                </tbody>
+              </table>
+
+              <!-- MODAL -->
+              <div ng-repeat="esfiha in esfihas" class="modal fade" id="{{esfiha._id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="exampleModalLabel">Esfiha - </b>{{esfiha.nome}}</h4></h4>
+                    </div>
+                    <div class="modal-body">
+                      <form name="form" ng-submit="adicionaPedido(this, 'esfiha')">
+                        <div class="col-md-6">
+                          <div class="form-group">
+                            <label for="Quantidade" class="control-label">Quantas esfihas?:</label>
+                            <input type="number" class="form-control" value="1" ng-model="qtd">
+                          </div>
+                        </div>
+
+                        <div class="form-group">
+                          <label for="message-text" class="control-label">Observações do pedido(ex:sem cebola, sem tomate):</label>
+                          <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
+                        </div>
+
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-primary">PRONTO!</button>
+                        </div>
+                      </form>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
             </div>
 
             <!-- PAINEL DE SUCOS -->
